--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <div id="root"></div>
     <div id="loader" class="hide"></div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
